# profan-CPP-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dependencies.py
include/: Yippee2.h
src/: Yippee2.cpp  main.cpp
